refactored code, added tasks removal & date validation